--- a/DistSemanticsBelgradeR-Part1.html
+++ b/DistSemanticsBelgradeR-Part1.html
@@ -319,7 +319,7 @@ xmlCorpus &lt;- VCorpus(myXMLSource,
 <pre class="r"><code># - inspect xmlCorpus
 xmlCorpus[[1]]$meta</code></pre>
 <pre><code>##   author       : character(0)
-##   datetimestamp: 2016-12-24 21:06:06
+##   datetimestamp: 2016-12-30 17:18:37
 ##   description  : character(0)
 ##   heading      : character(0)
 ##   id           : tm_Example01.xml
@@ -341,7 +341,7 @@ xmlCorpus[[1]]$meta</code></pre>
 # - accessing documents: content and metadata
 corpus[[1]]$meta</code></pre>
 <pre><code>##   author       : character(0)
-##   datetimestamp: 2016-12-24 21:06:06
+##   datetimestamp: 2016-12-30 17:18:37
 ##   description  : character(0)
 ##   heading      : character(0)
 ##   id           : All's Well That Ends Well.txt
@@ -760,7 +760,7 @@ setwd(outDir)
 writeCorpus(corpus)</code></pre>
 <p>However, this will not save any metadata.</p>
 <hr />
-<p>The forthcoming Part 2. of this tutorial will cover <strong>Entitity Recognition with {OpenNLP}</strong>. We will check how well can machine learning tell what characters appear in which Shakespeare’s play. In Part 3. we will deal with text pre-processing with {tm}, while Part 4. introduces topic modeling with Latent Dirichlet Allocation. Part 5, finally, will present an analytical exploration of the topic model. Stay tuned for more text-mining in R.</p>
+<p>The forthcoming <strong>Part 2.</strong> of this tutorial will cover <strong>Entitity Recognition with {OpenNLP}</strong>. We will check how well can machine learning tell what characters appear in which Shakespeare’s play. In <strong>Part 3.</strong> we will deal with text pre-processing with {tm}, while <strong>Part 4.</strong> introduces topic modeling with Latent Dirichlet Allocation. <strong>Part 5</strong>, finally, will present an analytical exploration of the topic model. Stay tuned for more text-mining in R.</p>
 <hr />
 <p>Visit my blog :: <a href="http://www.exactness.net">The Exactness of Mind</a>, 12/24/2016.</p>
 </div>
